# Deeprubric-site

./: .dockerignore  .gitignore  .npmrc  .pids  Dockerfile  LICENSE  README.md  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  vercel.json
apps/backend/: README.md  alembic.ini  nohup.out  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 5e380da1578d_initial_6_tables.py  a6552c96c9c0_add_hashed_password_to_users.py  d0ebd9115c27_add_password_and_superuser_fields_to_.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: dependencies.py
apps/backend/app/core/: config.py  constants.py  dependencies.py  logging.py  security.py  websocket_manager.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/models/: assignment.py  course.py  enrollment.py  grade.py  rubric.py  rubric_criteria.py  submission.py  user.py
apps/backend/app/models/orm/: __init__.py  assignment.py  base.py  course.py  enrollment.py  rubric.py  rubric_criteria.py  score.py  user.py
apps/backend/app/models/schemas/: auth.py  auth_schema.py  (+7 more)
apps/backend/app/permissions/: decorators.py  role.py  roles.py
apps/backend/app/repositories/: user_repository.py
apps/backend/app/schemas/: assignment_schema.py  auth_schema.py  course_schema.py  rubric_schema.py  submission_schema.py
apps/backend/app/services/: auth_service.py  course_service.py  file_service.py
apps/backend/app/utils/: email_utils.py
apps/backend/scripts/: README.md  seed_db.py
(+131 files in other folders)
